--- a/views/index.hbs
+++ b/views/index.hbs
@@ -62,7 +62,7 @@
                                             <a href="/userprofile/{{this.username}}">
                                                 <div class="carousel-caption customCaption">
                                                     <h4>{{this.displayname}}</h4>
-                                                    <pre class="initialHidden preUserInput">{{this.description}}</pre>
+                                                    <pre class="initialHidden preUserInput">{{{this.description}}}</pre>
                                                     <div class="btn btn-success initialHidden">Learn More</div>
                                                 </div>
                                             </a>
