--- a/views/orglist.hbs
+++ b/views/orglist.hbs
@@ -37,7 +37,7 @@
                                     <div class="col-md-8">
                                         <h4><a href="/userprofile/{{username}}">{{displayname}}</a></h4>
                                         <strong>Description:</strong>
-                                        <pre class="preUserInput">{{description}}</pre>
+                                        <pre class="preUserInput">{{{description}}}</pre>
                                     </div>
                                     <div class="col-md-4">
                                         <a href="/userprofile/{{username}}"><img class="img-responsive host-featured-img" src="/uploads/{{profileimg}}" /></a>
