Prefilled login form for demo users

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -68,6 +68,9 @@
                             <li id="navItemLogin">
                                 <a href="/login">Login</a>
                             </li>
+                            <li id="navItemLogin">
+                                <a href="/register">Register</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
