--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,11 +15,11 @@
                     <form action="/login" role="form" method="post">
                         <div class="form-group">
                             <label class="control-label" for="loginUser">Username:</label>
-                            <input type="text" class="form-control" name="username" id="loginUser" placeholder="Username" autofocus/>
+                            <input type="text" class="form-control" name="username" id="loginUser" placeholder="Username" value="OrgUser1" autofocus/>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="loginPass">Password:</label>
-                            <input type="password" class="form-control" name="password" id="loginPass" placeholder="Password" />
+                            <input type="password" class="form-control" name="password" id="loginPass" placeholder="Password" value="1"/>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-default">Submit</button>
