Add AWS S3 as profile image upload destination and fix profile image src in views

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,7 +47,7 @@
                                         </a>
                                         <div class="thumbnail nopadding nomargin noborder">
                                             <a href="/userprofile/{{orgsfeatured.0.username}}">
-                                                <img class="img-responsive host-featured-img" src="/uploads/{{orgsfeatured.0.profileimg}}" />
+                                                <img class="img-responsive host-featured-img" src="{{orgsfeatured.0.profileimg}}" />
                                             </a>
                                         </div>
                                     </div>
@@ -67,7 +67,7 @@
                                                 </div>
                                             </a>
                                             <div class="thumbnail nopadding nomargin noborder">
-                                                <a href="/userprofile/{{this.username}}"><img class="img-responsive host-featured-img" src="/uploads/{{this.profileimg}}" /></a>
+                                                <a href="/userprofile/{{this.username}}"><img class="img-responsive host-featured-img" src="{{this.profileimg}}" /></a>
                                             </div>
                                         </div>
 
