--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -27,7 +27,7 @@
                     </form>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive user-featured-image" src="/uploads/{{receivingUser.profileimg}}" />
+                    <img class="img-responsive user-featured-image" src="{{receivingUser.profileimg}}" />
                 </div>
             </div>
             <div class="row">
@@ -44,7 +44,7 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-xs-2 feedbackImgCol">
-                                    <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
+                                    <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="{{sender_id.profileimg}}" /></a>
 
                                 </div>
                                 <div class="col-xs-10">
@@ -65,7 +65,7 @@
                         <div class="panel-body messageDiv {{@index}}" data-originatingtitle="{{originatingTitle}}">
                             <div class="row">
                                 <div class="col-xs-2 feedbackImgCol">
-                                    <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
+                                    <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="{{sender_id.profileimg}}" /></a>
 
                                 </div>
                                 <div class="col-xs-10">
