--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -20,7 +20,7 @@
                             <pre class="preUserInput">{{{user.description}}}</pre>
                         </div>
                         <div class="col-md-4">
-                            <a href="/userprofile/{{user.username}}"><img class="img-responsive" src="/uploads/{{user.profileimg}}" /></a>
+                            <a href="/userprofile/{{user.username}}"><img class="img-responsive" src="{{userDetails.profileimg}}" /></a>
                         </div>
                     </div>
                     <div class="row">
@@ -53,7 +53,7 @@
                     <h4>Update Profile Information:</h4>
                 </div>
                 <div class="panel-body initialHidden">
-                    <form action="/updateuser" enctype="multipart/form-data" method="post">
+                    <form action="/updateuser" method="post">
                         <div class="form-group">
                             <label for="displayname">Display Name:</label>
                             <input type="text" class="form-control" id="displayname" name="displayname" value="{{user.displayname}}" />
@@ -63,15 +63,20 @@
                             <textarea id="about" class="form-control" name="about">{{user.description}}</textarea>
                         </div>
                         <div class="form-group">
-                            <label for="profileImgUpload">Profile Picture:</label>
+                            <label for="profileImgUpload">Profile Picture:</label><br>
+                            <img class="user-images" id="preview" src="{{ userDetails.profileimg }}">
                             <input type="file" id="profileImgUpload" name="upl" />
                         </div>
+                        <input type="hidden" id="profileImgUrl" name="profileImgUrl" value="{{ userDetails.profileimg }}">
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
-                    <strong>Add Images</strong>
-                    <form action="/addimages" id="userimages" class="dropzone" method="post">
 
-                    </form>
+                    <div>
+                        <strong>Add Images</strong>
+                        <form action="/addimages" id="userimages" class="dropzone" method="post">
+
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
