--- a/views/orglist.hbs
+++ b/views/orglist.hbs
@@ -40,7 +40,7 @@
                                         <pre class="preUserInput">{{{description}}}</pre>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="/userprofile/{{username}}"><img class="img-responsive host-featured-img" src="/uploads/{{profileimg}}" /></a>
+                                        <a href="/userprofile/{{username}}"><img class="img-responsive host-featured-img" src="{{profileimg}}" /></a>
                                     </div>
                                 </div>
 
